tests/baselines/reference/u-unicode-esc-bounds.errors.txt
u-unicode-esc-bounds.ts(19,5): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
u-unicode-esc-bounds.ts(19,13): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-unicode-esc-bounds.ts (2 errors) ====
    // Copyright (C) 2015 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: Out-of-range value of hexadecimal digits in UnicodeEscapeSequence
    es6id: 21.2.1.1
    info: |
        21.2.1.1 Static Semantics: Early Errors
    
        RegExpUnicodeEscapeSequence :: u{ HexDigits }
    
            - It is a Syntax Error if the MV of HexDigits > 1114111.
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\u{110000}/u;
        ~~~~~~
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
                ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    